# mahi-util

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  ex_concurrency.cpp  ex_console.cpp  ex_csv.cpp  ex_ctrl_c_handling.cpp  ex_filter.cpp  ex_json.cpp  ex_keyboard.cpp  ex_log.cpp  ex_math.cpp  ex_options.cpp  ex_print.cpp  ex_ring_buffer.cpp  ex_spsc.cpp  ex_stats.cpp  ex_time.cpp  ex_type_erasure.cpp
include/Mahi/: Util.hpp
include/Mahi/Util/: Console.hpp  Coroutine.hpp  Device.hpp  Event.hpp  NonCopyable.hpp  Print.hpp  Random.hpp  Range.hpp  StlStreams.hpp  System.hpp  Types.hpp
include/Mahi/Util/Concurrency/: Lock.hpp  Mutex.hpp  NamedMutex.hpp  Spinlock.hpp
include/Mahi/Util/Logging/: Csv.hpp  File.hpp  Log.hpp
include/Mahi/Util/Logging/Detail/: Csv.inl  LogUtil.hpp  StreamMeta.hpp
include/Mahi/Util/Logging/Formatters/: FuncMessageFormatter.hpp  MessageOnlyFormatter.hpp  TxtFormatter.hpp
include/Mahi/Util/Logging/Writers/: ColorConsoleWriter.hpp  ConsoleWriter.hpp  RollingFileWriter.hpp  Writer.hpp
include/Mahi/Util/Math/: Butterworth.hpp  Chirp.hpp  Constants.hpp  Differentiator.hpp  Filter.hpp  Functions.hpp  Integrator.hpp  TimeFunction.hpp  Waveform.hpp
include/Mahi/Util/Math/Detail/: Functions.inl
include/Mahi/Util/Templates/: RingBuffer.hpp  SPSCQueue.hpp  Singleton.hpp  TypeErasure.hpp
include/Mahi/Util/Timing/: Clock.hpp  Frequency.hpp  Time.hpp  Timer.hpp  Timestamp.hpp
src/Mahi/Util/: CMakeLists.txt  Console.cpp  Coroutine.cpp  Device.cpp  Random.cpp  System.cpp  Types.cpp
src/Mahi/Util/Concurrency/: CMakeLists.txt  Lock.cpp  Mutex.cpp  NamedMutex.cpp  Spinlock.cpp
src/Mahi/Util/Logging/: CMakeLists.txt  Csv.cpp  File.cpp  Log.cpp  LogUtil.cpp
src/Mahi/Util/Math/: Butterworth.cpp  CMakeLists.txt  Chirp.cpp  Constants.cpp  Differentiator.cpp  Filter.cpp  Functions.cpp  Integrator.cpp  TimeFunction.cpp  Waveform.cpp
src/Mahi/Util/Timing/: CMakeLists.txt  Clock.cpp  Frequency.cpp  Time.cpp  Timer.cpp  Timestamp.cpp
